variables.Variables.scala.error
Compilation error:
Variables:7: error: value ! is not a member of Int
while (stepAmount!0){
                 ^